adding data generation